Analisis de multimodelos

--- a/Reducción dimensionalidad.ipynb
+++ b/Reducción dimensionalidad.ipynb
@@ -1892,7 +1892,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff923fa2",
+   "id": "0ab417d5",
    "metadata": {},
    "source": [
     "## Comportamiento de LogisticRegression"
@@ -1901,7 +1901,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "768d5032",
+   "id": "55b3856b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1914,7 +1914,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "9969d5b2",
+   "id": "577905a4",
    "metadata": {},
    "outputs": [
     {
@@ -2050,7 +2050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6806220",
+   "id": "453a1381",
    "metadata": {},
    "source": [
     "## Comportamiento de Randomforest"
@@ -2059,7 +2059,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "f08adb9a",
+   "id": "39f60c7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2128,7 +2128,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "868aa8d1",
+   "id": "718c865c",
    "metadata": {},
    "outputs": [
     {
@@ -2184,7 +2184,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "05a4f0dd",
+   "id": "c9c5a3cd",
    "metadata": {},
    "outputs": [
     {
@@ -2239,7 +2239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8bd8e39",
+   "id": "8d7e599d",
    "metadata": {},
    "source": [
     "## Comportamiento de XGBClassifier"
@@ -2248,7 +2248,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "ab5f854c",
+   "id": "5b82bd0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2261,7 +2261,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "67965c34",
+   "id": "108a59ce",
    "metadata": {},
    "outputs": [
     {
@@ -2301,7 +2301,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "90818aea",
+   "id": "9959a314",
    "metadata": {},
    "outputs": [
     {
@@ -2341,7 +2341,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "c8e6f4e3",
+   "id": "745fe28e",
    "metadata": {},
    "outputs": [
     {
@@ -2380,7 +2380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a17674b8",
+   "id": "fad7d220",
    "metadata": {},
    "source": [
     "## Comportamiento de Catboost"
@@ -2389,7 +2389,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "12568fe8",
+   "id": "6ea89bf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2402,7 +2402,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "3e38f6e5",
+   "id": "a85af40c",
    "metadata": {},
    "outputs": [
     {
@@ -2442,7 +2442,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "9660e5ff",
+   "id": "757bd74c",
    "metadata": {},
    "outputs": [
     {
@@ -2482,7 +2482,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "c94a8e2b",
+   "id": "d3532386",
    "metadata": {},
    "outputs": [
     {
@@ -2522,7 +2522,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "533f276f",
+   "id": "09cb9dad",
    "metadata": {},
    "outputs": [
     {
@@ -2555,8 +2555,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "id": "9dc937be",
+   "execution_count": 153,
+   "id": "572c6886",
    "metadata": {},
    "outputs": [
     {
@@ -2586,114 +2586,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>LogisticRegression_pca30</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LogisticRegression_pca30</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Randomforest_fulldata</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Randomforest_fulldata</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Randomforest_pca30</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Randomforest_pca30</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Randomforest_pca100</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Randomforest_pca100</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Catboost_pca30</th>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.002737</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Catboost_pca30</th>\n",
-       "      <td>0.468750</td>\n",
-       "      <td>0.003732</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RXGBClassifier_pca30</th>\n",
-       "      <td>0.272727</td>\n",
-       "      <td>0.008957</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RXGBClassifier_pca30</th>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.008957</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Catboost_pca100</th>\n",
-       "      <td>0.703704</td>\n",
-       "      <td>0.028365</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Catboost_pca100</th>\n",
-       "      <td>0.762500</td>\n",
-       "      <td>0.030356</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LogisticRegression_pca100</th>\n",
-       "      <td>0.648330</td>\n",
-       "      <td>0.082110</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LogisticRegression_pca100</th>\n",
-       "      <td>0.651625</td>\n",
-       "      <td>0.089823</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Catboost_fulldata</th>\n",
-       "      <td>0.832618</td>\n",
-       "      <td>0.096541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Catboost_fulldata</th>\n",
-       "      <td>0.854031</td>\n",
-       "      <td>0.097537</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>XGBClassifier_pca100</th>\n",
-       "      <td>0.522702</td>\n",
-       "      <td>0.117442</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>XGBClassifier_pca100</th>\n",
-       "      <td>0.552542</td>\n",
-       "      <td>0.121672</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RXGBClassifier_fulldata</th>\n",
-       "      <td>0.699779</td>\n",
-       "      <td>0.236626</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RXGBClassifier_fulldata</th>\n",
-       "      <td>0.695560</td>\n",
-       "      <td>0.245583</td>\n",
+       "      <th>LogisticRegression_fulldata</th>\n",
+       "      <td>0.698464</td>\n",
+       "      <td>0.271461</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LogisticRegression_fulldata</th>\n",
@@ -2701,9 +2596,114 @@
        "      <td>0.264494</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>LogisticRegression_fulldata</th>\n",
-       "      <td>0.698464</td>\n",
-       "      <td>0.271461</td>\n",
+       "      <th>RXGBClassifier_fulldata</th>\n",
+       "      <td>0.695560</td>\n",
+       "      <td>0.245583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RXGBClassifier_fulldata</th>\n",
+       "      <td>0.699779</td>\n",
+       "      <td>0.236626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>XGBClassifier_pca100</th>\n",
+       "      <td>0.552542</td>\n",
+       "      <td>0.121672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>XGBClassifier_pca100</th>\n",
+       "      <td>0.522702</td>\n",
+       "      <td>0.117442</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Catboost_fulldata</th>\n",
+       "      <td>0.854031</td>\n",
+       "      <td>0.097537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Catboost_fulldata</th>\n",
+       "      <td>0.832618</td>\n",
+       "      <td>0.096541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LogisticRegression_pca100</th>\n",
+       "      <td>0.651625</td>\n",
+       "      <td>0.089823</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LogisticRegression_pca100</th>\n",
+       "      <td>0.648330</td>\n",
+       "      <td>0.082110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Catboost_pca100</th>\n",
+       "      <td>0.762500</td>\n",
+       "      <td>0.030356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Catboost_pca100</th>\n",
+       "      <td>0.703704</td>\n",
+       "      <td>0.028365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RXGBClassifier_pca30</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.008957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RXGBClassifier_pca30</th>\n",
+       "      <td>0.272727</td>\n",
+       "      <td>0.008957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Catboost_pca30</th>\n",
+       "      <td>0.468750</td>\n",
+       "      <td>0.003732</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Catboost_pca30</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.002737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LogisticRegression_pca30</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LogisticRegression_pca30</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Randomforest_fulldata</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Randomforest_fulldata</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Randomforest_pca30</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Randomforest_pca30</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Randomforest_pca100</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Randomforest_pca100</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2711,46 +2711,46 @@
       ],
       "text/plain": [
        "                             PRECISION    RECALL\n",
-       "LogisticRegression_pca30      0.000000  0.000000\n",
-       "LogisticRegression_pca30      0.000000  0.000000\n",
-       "Randomforest_fulldata         0.000000  0.000000\n",
-       "Randomforest_fulldata         0.000000  0.000000\n",
-       "Randomforest_pca30            0.000000  0.000000\n",
-       "Randomforest_pca30            0.000000  0.000000\n",
-       "Randomforest_pca100           0.000000  0.000000\n",
-       "Randomforest_pca100           0.000000  0.000000\n",
-       "Catboost_pca30                0.500000  0.002737\n",
-       "Catboost_pca30                0.468750  0.003732\n",
-       "RXGBClassifier_pca30          0.272727  0.008957\n",
-       "RXGBClassifier_pca30          0.333333  0.008957\n",
-       "Catboost_pca100               0.703704  0.028365\n",
-       "Catboost_pca100               0.762500  0.030356\n",
-       "LogisticRegression_pca100     0.648330  0.082110\n",
-       "LogisticRegression_pca100     0.651625  0.089823\n",
-       "Catboost_fulldata             0.832618  0.096541\n",
-       "Catboost_fulldata             0.854031  0.097537\n",
-       "XGBClassifier_pca100          0.522702  0.117442\n",
-       "XGBClassifier_pca100          0.552542  0.121672\n",
-       "RXGBClassifier_fulldata       0.699779  0.236626\n",
-       "RXGBClassifier_fulldata       0.695560  0.245583\n",
+       "LogisticRegression_fulldata   0.698464  0.271461\n",
        "LogisticRegression_fulldata   0.665207  0.264494\n",
-       "LogisticRegression_fulldata   0.698464  0.271461"
+       "RXGBClassifier_fulldata       0.695560  0.245583\n",
+       "RXGBClassifier_fulldata       0.699779  0.236626\n",
+       "XGBClassifier_pca100          0.552542  0.121672\n",
+       "XGBClassifier_pca100          0.522702  0.117442\n",
+       "Catboost_fulldata             0.854031  0.097537\n",
+       "Catboost_fulldata             0.832618  0.096541\n",
+       "LogisticRegression_pca100     0.651625  0.089823\n",
+       "LogisticRegression_pca100     0.648330  0.082110\n",
+       "Catboost_pca100               0.762500  0.030356\n",
+       "Catboost_pca100               0.703704  0.028365\n",
+       "RXGBClassifier_pca30          0.333333  0.008957\n",
+       "RXGBClassifier_pca30          0.272727  0.008957\n",
+       "Catboost_pca30                0.468750  0.003732\n",
+       "Catboost_pca30                0.500000  0.002737\n",
+       "LogisticRegression_pca30      0.000000  0.000000\n",
+       "LogisticRegression_pca30      0.000000  0.000000\n",
+       "Randomforest_fulldata         0.000000  0.000000\n",
+       "Randomforest_fulldata         0.000000  0.000000\n",
+       "Randomforest_pca30            0.000000  0.000000\n",
+       "Randomforest_pca30            0.000000  0.000000\n",
+       "Randomforest_pca100           0.000000  0.000000\n",
+       "Randomforest_pca100           0.000000  0.000000"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_results = pd.DataFrame(results, columns=columnas,index=filas)\n",
-    "df_results.sort_values([\"RECALL\",\"PRECISION\"], ascending=)"
+    "df_results.sort_values([\"RECALL\",\"PRECISION\"], ascending=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66345257",
+   "id": "7b47d89d",
    "metadata": {},
    "outputs": [],
    "source": []
